// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can start/pause 1`] = `
Array [
  <Timer
    intervals={
        Array [
            300,
            60,
            90,
            60,
            90,
            60,
            90,
            60,
            90,
            60,
            90,
            60,
            90,
            60,
            90,
            60,
            90,
            300,
          ]
    }
    play={false}
    segment={0}
    updateInterval={[Function]}
>
    <div>
        <span
            className="current-time"
        >
            0:00
        </span>
        <span
            className="total-time"
        >
            /
            5:00
        </span>
    </div>
</Timer>,
  <Timer
    intervals={
        Array [
            1800,
          ]
    }
    play={false}
    segment={0}
    updateInterval={[Function]}
>
    <div>
        <span
            className="current-time"
        >
            0:00
        </span>
        <span
            className="total-time"
        >
            /
            30:00
        </span>
    </div>
</Timer>,
]
`;

exports[`can start/pause 2`] = `
Array [
  <Timer
    intervals={
        Array [
            300,
            60,
            90,
            60,
            90,
            60,
            90,
            60,
            90,
            60,
            90,
            60,
            90,
            60,
            90,
            60,
            90,
            300,
          ]
    }
    play={false}
    segment={0}
    updateInterval={[Function]}
>
    <div>
        <span
            className="current-time"
        >
            0:01
        </span>
        <span
            className="total-time"
        >
            /
            5:00
        </span>
    </div>
</Timer>,
  <Timer
    intervals={
        Array [
            1800,
          ]
    }
    play={false}
    segment={0}
    updateInterval={[Function]}
>
    <div>
        <span
            className="current-time"
        >
            0:01
        </span>
        <span
            className="total-time"
        >
            /
            30:00
        </span>
    </div>
</Timer>,
]
`;

exports[`can start/pause 3`] = `
Array [
  <Timer
    intervals={
        Array [
            300,
            60,
            90,
            60,
            90,
            60,
            90,
            60,
            90,
            60,
            90,
            60,
            90,
            60,
            90,
            60,
            90,
            300,
          ]
    }
    play={false}
    segment={0}
    updateInterval={[Function]}
>
    <div>
        <span
            className="current-time"
        >
            0:01
        </span>
        <span
            className="total-time"
        >
            /
            5:00
        </span>
    </div>
</Timer>,
  <Timer
    intervals={
        Array [
            1800,
          ]
    }
    play={false}
    segment={0}
    updateInterval={[Function]}
>
    <div>
        <span
            className="current-time"
        >
            0:01
        </span>
        <span
            className="total-time"
        >
            /
            30:00
        </span>
    </div>
</Timer>,
]
`;

exports[`gets correct interval type gets cooldown 1`] = `
<div
  className="interval-timer"
>
  <span
    className="interval-text gray"
  >
    Run
  </span>
  <Timer
    intervals={
      Array [
        300,
        60,
        90,
        60,
        90,
        60,
        90,
        60,
        90,
        60,
        90,
        60,
        90,
        60,
        90,
        60,
        90,
        300,
      ]
    }
    play={false}
    segment={0}
    updateInterval={[Function]}
  />
</div>
`;

exports[`gets correct interval type gets run 1`] = `
<div
  className="interval-timer"
>
  <span
    className="interval-text gray"
  >
    Run
  </span>
  <Timer
    intervals={
      Array [
        300,
        60,
        90,
        60,
        90,
        60,
        90,
        60,
        90,
        60,
        90,
        60,
        90,
        60,
        90,
        60,
        90,
        300,
      ]
    }
    play={false}
    segment={0}
    updateInterval={[Function]}
  />
</div>
`;

exports[`gets correct interval type gets walk 1`] = `
<div
  className="interval-timer"
>
  <span
    className="interval-text gray"
  >
    Walk
  </span>
  <Timer
    intervals={
      Array [
        300,
        60,
        90,
        60,
        90,
        60,
        90,
        60,
        90,
        60,
        90,
        60,
        90,
        60,
        90,
        60,
        90,
        300,
      ]
    }
    play={false}
    segment={0}
    updateInterval={[Function]}
  />
</div>
`;

exports[`gets correct interval type gets warmup 1`] = `
<div
  className="interval-timer"
>
  <span
    className="interval-text gray"
  >
    Warmup
  </span>
  <Timer
    intervals={
      Array [
        300,
        60,
        90,
        60,
        90,
        60,
        90,
        60,
        90,
        60,
        90,
        60,
        90,
        60,
        90,
        60,
        90,
        300,
      ]
    }
    play={false}
    segment={0}
    updateInterval={[Function]}
  />
</div>
`;
